--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,6 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
-VERILOG_SOURCES += $(pwd)/../hdl/dut.v
-TOPLEVEL = dut
-MODULE = dut_test
-include $(shell cocotb-config --makefiles)/Makefile.sim
+VERILOG_SOURCES += $(PWD)/../HDL/dut.v
+or:
+    $(MAKE) sim MODULE=or_test TOPLEVEL=or_gate
+include $(shell cocotb-config --makefile)/Makefile.sim
